# navigator-proposals

./: FWOrbitFlightMode.hpp  FlightMode.hpp  FlightModeManager.hpp  FlightModeSwitcher.hpp  MCAltControlFlightMode.hpp  MCPosControlFlightMode.hpp  StandardTiltRotorVehicle.hpp  Vehicle.hpp  VehicleState.hpp  proposal.hpp
Test/: CMakeLists.txt  TestMcPosControlFlightMode.cpp
